<resources>
    <string name="app_name">AndroShow</string>
    <string name="notConnectedDesc">Internet not connected</string>
    <string name="videosString">Videos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_wallpapers">Wallpapers</string>
    <string name="welcome">Welcome</string>
    <string name="aboutus">AboutUs</string>
    <string name="listensongs">Listen Songs</string>
    <string name="ringtones">Ringtones</string>
    <string name="nointernet">Seems like you are not connected to Internet or your connection is weak.</string>
    <string name="connect_message">Try reconnecting to Internet, then re-launch the app</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="RingtonesText">Ringtones</string>
    <string name="Avengers">Avengers</string>
    <string name="AboutMovie_Text">About Us</string>
    <string name="duration">Duration :</string>
    <string name="RingDownText">Download Ringtones</string>
    <string name="ViewWallText">View Wallpapers</string>
    <string name="WatchVidText">Watch Videos</string>
    <string name="ListenSongText">Listen Songs</string>
    <string name="PauseDesc">A Pause Button</string>
    <string name="songPhrase">Songs</string>
    <string name="PlayDesc">A Play Button</string>
    <string name="StopDesc">A Stop Button</string>
    <string name="ListenSongIcon">Listen Song Icon</string>
    <string name="VideoIcon">Video Icon</string>
    <string name="WallpapersButton">Wallpapers Button</string>
    <string name="RingTonesButton">Ringtones Button</string>
    <string name="AboutUsIcon">About Us Icon</string>
    <string name="click_text">Click Here</string>
    <string name="wiki_url">"https://sites.google.com/view/androshow/home"</string>
    <string name="checkInternetMessage">Please check your internet connection</string>
    <string name="somethingWentWrong">Something Went Wrong!!  </string>
    <string name="what_is_your_wish">What is your wish?</string>
    <string name="app_icon">App icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
