<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:background="@drawable/gradient_orange">

    <ImageView
        android:id="@+id/notconnected_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/notConnectedDesc"
        android:scaleType="fitXY"
        android:src="@android:drawable/ic_dialog_alert" />

    <TextView
        android:id="@+id/text_nointernet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notconnected_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:gravity="center"
        android:text="@string/nointernet"
        android:textColor="#003366" />

    <TextView
        android:id="@+id/text_hurryup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_nointernet"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/connect_message"
        android:textColor="#003366" />

</RelativeLayout>